# neume-ml

./: .gitignore  CLAUDE.md  README.md  TRAINER_SUMMARY.md  TRAINING.md  pyproject.toml  requirements.txt
configs/: synthesis.yaml
data/analysis/: augmentation_config.json  bach_mass_b_minor_kyrie_analysis.json  lauridsen_o_magnum_mysterium_analysis.json  summary.json  tallis_spem_in_alium_analysis.json  whitacre_lux_aurumque_analysis.json
data/impulse_responses/: README.md
scripts/: analyze_recordings.py  generate_nvoice_samples.py  generate_test_samples.py  test_augmentation.py  test_dataset.py  test_model.py  test_voicing_system.py  train.py
src/: __init__.py
src/analysis/: README.md  __init__.py  dynamics.py  pitch.py  report.py  reverb.py  spectral.py
src/augmentation/: __init__.py  amplitude_modulation.py  dynamics.py  lowpass.py  pipeline.py  pitch_scatter.py  reverb.py  vibrato.py
src/data/: __init__.py  dataset.py
src/data_generation/: __init__.py  generate_training_set.py
src/data_generation/voicing/: __init__.py  bass_note.py  chord_types.py  duration.py  non_chord_tones.py  shell_strategies.py  validation.py  voice_distribution.py  voicing_styles.py  weights.py
src/model/: __init__.py  chord_model.py  configs.py  conformer.py  heads.py  labels.py  loss.py  preprocessing.py  subsampling.py
src/synthesis/: __init__.py  chord_types.py  fluidsynth_renderer.py  voicing.py
src/training/: __init__.py  example_usage.py  metrics.py  trainer.py
src/utils/: __init__.py  audio.py
